--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,8 +82,10 @@ android {
         applicationId "com.soundcave_app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 10
-        versionName "1.9"
+        versionCode 11
+        versionName "1.10"
+        // Image Crop Picker configuration
+        vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
         debug {
@@ -104,6 +106,10 @@ android {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
