--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-image-crop-picker": "^0.51.1",
     "react-native-music-control": "^1.4.1",
     "react-native-normalize": "^1.0.1",
     "react-native-safe-area-context": "^5.5.2",
