--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/slider": "^5.1.1",
     "@react-native-vector-icons/evil-icons": "^12.4.0",
     "@react-native-vector-icons/fontawesome6": "^12.3.0",
     "@react-native/new-app-screen": "0.82.1",
